lets loose some wheight

--- a/README
+++ b/README
@@ -28,7 +28,4 @@ google
 public trackers
 tpb
 github
-
-
-                                          ▲
-                                         ▲ ▲
+torrentfreak.com
